<resources>
    <string name="app_name">沃能快充</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="forgetpwd">忘记密码</string>
    <string name="save">保存</string>
    <string name="nextstep">下一步</string>
    <string name="agree">同意</string>
    <string name="password">密　码</string>
    <string name="get_checknum">获取验证码</string>
    <string name="setting">设置</string>
    <string name="login_hint">请输入电话号码</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="old_pwd_hint">请输入旧密码</string>
    <string name="new_pwd_hint">请输入新密码</string>
    <string name="pwd_confirm_hint">请输入确认新密码</string>
    <string name="edt_checknum">请输入验证码</string>

    <string name="recharge">充电</string>
    <string name="order">订单</string>
    <string name="mine">我的</string>

    <string name="show_ont">移动补电车</string>
    <string name="show_two">充电桩</string>
    <string name="qr_code">将二维码/条码放入框内，即可自动扫描</string>
    <string name="qr_title">扫码补电</string>
    <string name="input_number">输入终端号</string>
    <string name="qr_el">扫码充电</string>
    <string name="please_input_number">请输入终端号</string>
    <string name="client_number">终端号</string>
    <string name="please_input_address">请输入地址</string>
    <string name="chong_address">充电地址</string>
    <string name="now_location">当前城市：</string>
    <string name="select_title">筛选</string>
    <string name="interflow">交流桩</string>
    <string name="dc">直流桩</string>
    <string name="charging_type">充电桩类型</string>
    <string name="_0kw_300kw">查看功率0kw-300kw内充电桩及补电车</string>
    <string name="km_dist">距离范围（km）</string>
    <string name="show_sample">仅显示空闲站点</string>
    <string name="unkown_dis">无法定位到该区域</string>

    <string name="wallet_deposit">充值</string>
    <string name="wallet_withdraw">提现</string>
    <string name="next_step">下一步</string>
    <string name="now_no_support">暂不支持选城市</string>
    <string name="edit_sai_xuan_success">修改筛选条件成功</string>

    <string name="dialog_pay_way_balance">%1$s (剩余%2$.2f)</string>
    <string name="station_electric_price">电费 <Data><![CDATA[<font color="#ff3b30">%1$s</font>]]></Data></string>
    <string name="station_service_price">服务费 <Data><![CDATA[<font color="#ff3b30">%1$s</font>]]></Data></string>
    <string name="exit_hint">再按一次退出系统!</string>
    <string name="finish">完成</string>
    <string name="more_message">更多信息</string>
    <string name="current_version">当前版本</string>
    <string name="get_gun_info_fail">获取失败，请检查终端号是否正确</string>
    <string name="maintaining">正在维护</string>
    <string name="charging">正在充电</string>
    <string name="charge_soon">立即充电</string>
    <string name="gun_number">编号:</string>
    <string name="title_activity_invoice_history">InvoiceHistoryActivity</string>
    <string name="recharge_car">补电车</string>
    <string name="cookie_timeout">您已退出登录,请重新登录</string>
</resources>
