<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/title_default"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:padding="@dimen/dp_40">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:background="@drawable/shape_maincolor_kuang"
            >
            <EditText
                android:id="@+id/register_edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:hint="@string/login_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="@dimen/dp_10"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_maincolor_kuang"
            android:layout_marginTop="@dimen/dp_10">
            <EditText
                android:id="@+id/register_edtChecknum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:hint="@string/edt_checknum"
                android:inputType="textPassword"
                android:padding="12dp"/>
            <TextView
                android:id="@+id/register_tvChecknum"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@id/register_edtChecknum"
                android:layout_alignTop="@id/register_edtChecknum"
                android:gravity="center"
                android:textColor="@color/main_color"
                android:background="@drawable/shape_maincolor_kuang"
                android:text="@string/get_checknum"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape_maincolor_kuang"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="2dp">
            <EditText
                android:id="@+id/register_edtPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"
                android:padding="@dimen/dp_10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape_maincolor_kuang"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="2dp">
            <EditText
                android:id="@+id/register_edtConfirmPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"
                android:padding="@dimen/dp_10"/>
        </LinearLayout>


        <TextView
            android:id="@+id/register_tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/dp_14"/>
    </LinearLayout>
</RelativeLayout>