<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <include
        android:id="@+id/title"
        layout="@layout/title_default" />

    <RadioGroup
        android:id="@+id/main_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/main_rbRechargeCar"
            style="@style/myRadioButto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="-2dp"
            android:drawableTop="@drawable/selector_recharge_car"
            android:text="@string/recharge_car"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/main_rbRecharge"
            style="@style/myRadioButto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="-2dp"
            android:drawableTop="@drawable/selector_recharge"
            android:text="@string/show_two"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/main_rbScan"
            style="@style/myRadioButto_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="-18dp"
            android:drawableTop="@mipmap/icon_scan"

            />

        <RadioButton
            android:id="@+id/main_rbOrder"
            style="@style/myRadioButto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="-2dp"
            android:drawableTop="@drawable/selector_order"
            android:text="@string/order"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/main_rbMine"
            style="@style/myRadioButto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="-2dp"
            android:drawableTop="@drawable/selector_mine"
            android:text="@string/mine"
            android:textSize="14sp" />

    </RadioGroup>

    <include
        layout="@layout/view_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignTop="@id/main_rg" />

    <com.optimumnano.quickcharge.views.MyViewPager
        android:id="@+id/main_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_rg"
        android:layout_below="@id/title" />


</RelativeLayout>
