<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.optimumnano.quickcharge.activity.login.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:padding="@dimen/dp_40">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:background="@drawable/shape_maincolor_kuang"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/geren"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/login_edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:hint="@string/login_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="@dimen/dp_10"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape_maincolor_kuang"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="2dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mima"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/login_edtPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:hint="@string/pwd_hint"
                android:maxLength="16"
                android:inputType="textPassword"
                android:padding="@dimen/dp_10"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/login_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="记住密码"
                android:padding="@dimen/default_padding"
                android:layout_marginLeft="@dimen/default_lrmargin"
                android:button="@drawable/login_checkbox"
                android:textColor="@drawable/selector_homecolor"/>
            <TextView
                android:id="@+id/login_tvForgetpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/forgetpwd"
                android:textColor="@color/main_color"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>



        <TextView
            android:id="@+id/login_tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/dp_14"/>
        <TextView
            android:id="@+id/login_tvReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style="@style/ButtonStyle1"
            android:layout_marginTop="@dimen/dp_14"/>


    </LinearLayout>
    <TextView
        android:id="@+id/tv_login_type_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:layout_alignParentRight="true"
        android:textColor="@color/white"
        android:padding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_36"
        android:text="企业"
        />
</RelativeLayout>
