<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.optimumnano.quickcharge.activity.login.LoginActivity">
    <include layout="@layout/title_main"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:padding="@dimen/dp_40">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:background="@drawable/shape_maincolor_kuang"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/yanzhengma"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/modify_password_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:hint="@string/old_pwd_hint"
                android:inputType="textPassword"
                android:maxLength="16"
                android:padding="@dimen/dp_10"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape_maincolor_kuang"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="2dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mima"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/modify_password_new_Pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:maxLength="16"
                android:hint="@string/new_pwd_hint"
                android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:inputType="textPassword"
                android:padding="@dimen/dp_10"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape_maincolor_kuang"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="2dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/querenmima"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/modify_password_confirm_Pwd"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="16"
                android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:hint="@string/pwd_confirm_hint"
                android:inputType="textPassword"
                android:padding="@dimen/dp_10" />
        </LinearLayout>




        <TextView

            android:id="@+id/modify_password_confirm_Pwd_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/dp_36"/>



    </LinearLayout>
</RelativeLayout>
