<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/title_main"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:padding="@dimen/dp_40">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape_maincolor_kuang"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/geren"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/register_edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:hint="@string/login_hint"
                android:layout_gravity="center_vertical"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="@dimen/dp_10"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_maincolor_kuang"
            android:layout_marginTop="@dimen/dp_10">
            <ImageView
                android:id="@+id/register_ivicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/yanzhengma"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:layout_marginLeft="28dp"
                android:id="@+id/register_edtChecknum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:hint="@string/edt_checknum"
                android:inputType="number"
                android:maxLength="6"
                android:padding="12dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/register_tvChecknum"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@id/register_edtChecknum"
                android:layout_alignTop="@id/register_edtChecknum"
                android:gravity="center"
                android:textColor="@color/main_color"
                android:background="@drawable/shape_maincolor_kuang"
                android:text="@string/get_checknum"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape_maincolor_kuang"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="2dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mima"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/register_edtPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:maxLength="16"
                android:hint="@string/pwd_hint"
                android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:inputType="textPassword"
                android:padding="@dimen/dp_10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape_maincolor_kuang"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="2dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/querenmima"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/register_edtConfirmPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:maxLength="16"
                android:hint="@string/pwd_hint"
                android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:inputType="textPassword"
                android:padding="@dimen/dp_10"/>
        </LinearLayout>


        <TextView
            android:id="@+id/register_tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/default_padding40"/>
    </LinearLayout>

</RelativeLayout>
